--- a/app/src/main/res/layout/activity_videoplayer.xml
+++ b/app/src/main/res/layout/activity_videoplayer.xml
@@ -4,11 +4,12 @@
                 android:layout_height="match_parent"
                 android:background="#000000"
                 android:gravity="center">
+
     <com.ming.live_player.view.MyVideoView
         android:id="@+id/video_view"
-        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
 
     <LinearLayout
         android:id="@+id/ll_brightness"
@@ -23,9 +24,9 @@
 
         <com.ming.live_player.view.custom.VerticalSeekBar
             android:id="@+id/seekbar_brightness"
-            android:max="255"
             android:layout_width="30dp"
             android:layout_height="200dp"
+            android:max="255"
             android:maxHeight="10dp"
             android:progressDrawable="@drawable/progress_horizontal"
             android:splitTrack="false"
@@ -49,22 +50,32 @@
         android:layout_marginEnd="40dp"
         android:orientation="vertical"
         >
+
         <com.ming.live_player.view.custom.VerticalSeekBar
             android:id="@+id/seekbar_voice"
-            android:progressDrawable="@drawable/progress_horizontal"
+            android:layout_width="30dp"
+            android:layout_height="200dp"
             android:maxHeight="10dp"
+            android:progressDrawable="@drawable/progress_horizontal"
             android:splitTrack="false"
-            android:thumb="@drawable/progress_thumb"
-            android:layout_width="30dp"
-            android:layout_height="200dp"/>
+            android:thumb="@drawable/progress_thumb"/>
+
         <ImageView
-            android:src="@drawable/voice"
             android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_height="30dp"
+            android:src="@drawable/voice"/>
 
     </LinearLayout>
 
 
-    <include layout="@layout/media_controller" android:id="@+id/mc_controller"/>
+    <include
+        android:id="@+id/mc_controller"
+        layout="@layout/media_controller"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"/>
 
 </RelativeLayout>
